--- a/static/less/styles.less
+++ b/static/less/styles.less
@@ -260,6 +260,16 @@ h4.area-header {
     visibility: hidden;
 }
 
-/*
- * /TRANSACTION LIST STYLES
- */
+.modal {
+    .modal-header {
+        background-color: @gray;
+        color: #FFF;
+
+        .close {
+            color: #FFF;
+        }
+    }
+    .modal-footer {
+        background-color: @gray-lighter;
+    }
+}
