--- a/templates/webapp/settings/category-edit.html
+++ b/templates/webapp/settings/category-edit.html
@@ -39,7 +39,7 @@
         
         {% trans "Remove category" %}</button>
 
-    <button type="button" class="btn" ng-click="hide()">{% trans "Cancel" %}</button>
+    <button type="button" class="btn btn-default" ng-click="hide()">{% trans "Cancel" %}</button>
     <button class="btn btn-primary" ng-click="saveCategory()">{% trans "Save" %}</button>
 </div>
 
