--- a/static/less/styles.less
+++ b/static/less/styles.less
@@ -14,9 +14,14 @@
     .make-lg-column(3);
 }
 
-.content-column {
+.content-column-middle {
     .make-sm-column(7);
     .make-lg-column(6);
+}
+
+.content-column-right {
+    .make-sm-column(7);
+    .make-lg-column(9);
 }
 
 .right-column {
