--- a/templates/webapp/transaction-list.html
+++ b/templates/webapp/transaction-list.html
@@ -4,7 +4,7 @@
     {% include "webapp/transaction-form.html" %}
 </div>
 
-<div class="content-column">
+<div class="content-column-middle">
 
     {% comment %}
     {% include "webapp/reminder-list.html" %}
