redoing login and register forms

--- a/static/less/styles.less
+++ b/static/less/styles.less
@@ -227,7 +227,7 @@ thead tr th {
     text-align: center;
 }
 
-h4.area-header {
+.area-header {
     text-align: center;
     margin-top: 25px;
     margin-bottom: 25px;
@@ -277,4 +277,10 @@ h4.area-header {
     .modal-footer {
         background-color: @gray-lighter;
     }
+}
+
+.change-password-panel {
+    width: 40%;
+    
+    .center-block();
 }
