--- a/templates/password_reset/base.html
+++ b/templates/password_reset/base.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 
 {% block body %}
-    <div class="container center-form">
-    <h3>{% block title %}{% endblock title %}</h3>
-    {% block content %}
-    {% endblock content %}
+    <div class="center-block">
+        <h3>{% block title %}{% endblock title %}</h3>
+        {% block content %}
+        {% endblock content %}
     </div> <!-- container -->
 {% endblock body %}
