--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -4537,13 +4537,6 @@ textarea.input-group-sm > .input-group-btn > .btn {
     margin-left: 0;
   }
 }
-.navbar-form .input-icon i.input-icon-prepend {
-  top: 1px;
-  left: 20px;
-}
-.navbar-form .input-icon input {
-  margin-left: 10px;
-}
 @media (max-width: 767px) {
   .navbar-form .form-group {
     margin-bottom: 5px;
@@ -6824,180 +6817,6 @@ a > i[class^="icon"] {
 /*
  * /OVERRIDES
  */
-[id="signup-area"] {
-  min-height: 20px;
-  padding: 19px;
-  margin-bottom: 20px;
-  background-color: #f5f5f5;
-  border: 1px solid #e3e3e3;
-  border-radius: 0px;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
-}
-[id="signup-area"] blockquote {
-  border-color: #ddd;
-  border-color: rgba(0, 0, 0, 0.15);
-}
-[id="signup-area"] form {
-  width: 80%;
-  margin: auto;
-}
-section.main {
-  background-image: url(../img/textured_paper.png);
-}
-form[id="register-form"] input[type="submit"],
-form[id="signin-form"] input[type="submit"] {
-  display: inline-block;
-  padding: 6px 12px;
-  margin-bottom: 0;
-  font-size: 14px;
-  font-weight: normal;
-  line-height: 1.428571429;
-  text-align: center;
-  vertical-align: middle;
-  cursor: pointer;
-  border: 1px solid transparent;
-  border-radius: 0px;
-  white-space: nowrap;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  -o-user-select: none;
-  user-select: none;
-  text-transform: uppercase;
-  font-family: "Roboto", sans-serif;
-  display: block;
-  width: 100%;
-  padding-left: 0;
-  padding-right: 0;
-}
-form[id="register-form"] input[type="submit"]:focus,
-form[id="signin-form"] input[type="submit"]:focus {
-  outline: thin dotted #333;
-  outline: 5px auto -webkit-focus-ring-color;
-  outline-offset: -2px;
-}
-form[id="register-form"] input[type="submit"]:hover,
-form[id="signin-form"] input[type="submit"]:hover,
-form[id="register-form"] input[type="submit"]:focus,
-form[id="signin-form"] input[type="submit"]:focus {
-  color: #333333;
-  text-decoration: none;
-}
-form[id="register-form"] input[type="submit"]:active,
-form[id="signin-form"] input[type="submit"]:active,
-form[id="register-form"] input[type="submit"].active,
-form[id="signin-form"] input[type="submit"].active {
-  outline: 0;
-  background-image: none;
-  -webkit-box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-  box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-}
-form[id="register-form"] input[type="submit"].disabled,
-form[id="signin-form"] input[type="submit"].disabled,
-form[id="register-form"] input[type="submit"][disabled],
-form[id="signin-form"] input[type="submit"][disabled],
-fieldset[disabled] form[id="register-form"] input[type="submit"],
-fieldset[disabled] form[id="signin-form"] input[type="submit"] {
-  cursor: not-allowed;
-  pointer-events: none;
-  opacity: 0.65;
-  filter: alpha(opacity=65);
-  -webkit-box-shadow: none;
-  box-shadow: none;
-}
-form[id="register-form"] input[type="submit"] i,
-form[id="signin-form"] input[type="submit"] i {
-  margin-left: 5px;
-}
-form[id="register-form"] input[type="submit"] {
-  color: #ffffff;
-  background-color: #d9534f;
-  border-color: #d43f3a;
-}
-form[id="register-form"] input[type="submit"]:hover,
-form[id="register-form"] input[type="submit"]:focus,
-form[id="register-form"] input[type="submit"]:active,
-form[id="register-form"] input[type="submit"].active,
-.open .dropdown-toggleform[id="register-form"] input[type="submit"] {
-  color: #ffffff;
-  background-color: #d2322d;
-  border-color: #ac2925;
-}
-form[id="register-form"] input[type="submit"]:active,
-form[id="register-form"] input[type="submit"].active,
-.open .dropdown-toggleform[id="register-form"] input[type="submit"] {
-  background-image: none;
-}
-form[id="register-form"] input[type="submit"].disabled,
-form[id="register-form"] input[type="submit"][disabled],
-fieldset[disabled] form[id="register-form"] input[type="submit"],
-form[id="register-form"] input[type="submit"].disabled:hover,
-form[id="register-form"] input[type="submit"][disabled]:hover,
-fieldset[disabled] form[id="register-form"] input[type="submit"]:hover,
-form[id="register-form"] input[type="submit"].disabled:focus,
-form[id="register-form"] input[type="submit"][disabled]:focus,
-fieldset[disabled] form[id="register-form"] input[type="submit"]:focus,
-form[id="register-form"] input[type="submit"].disabled:active,
-form[id="register-form"] input[type="submit"][disabled]:active,
-fieldset[disabled] form[id="register-form"] input[type="submit"]:active,
-form[id="register-form"] input[type="submit"].disabled.active,
-form[id="register-form"] input[type="submit"][disabled].active,
-fieldset[disabled] form[id="register-form"] input[type="submit"].active {
-  background-color: #d9534f;
-  border-color: #d43f3a;
-}
-form[id="login-inline"] input[type="submit"] {
-  display: inline-block;
-  padding: 6px 12px;
-  margin-bottom: 0;
-  font-size: 14px;
-  font-weight: normal;
-  line-height: 1.428571429;
-  text-align: center;
-  vertical-align: middle;
-  cursor: pointer;
-  border: 1px solid transparent;
-  border-radius: 0px;
-  white-space: nowrap;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  -o-user-select: none;
-  user-select: none;
-  text-transform: uppercase;
-  font-family: "Roboto", sans-serif;
-}
-form[id="login-inline"] input[type="submit"]:focus {
-  outline: thin dotted #333;
-  outline: 5px auto -webkit-focus-ring-color;
-  outline-offset: -2px;
-}
-form[id="login-inline"] input[type="submit"]:hover,
-form[id="login-inline"] input[type="submit"]:focus {
-  color: #333333;
-  text-decoration: none;
-}
-form[id="login-inline"] input[type="submit"]:active,
-form[id="login-inline"] input[type="submit"].active {
-  outline: 0;
-  background-image: none;
-  -webkit-box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-  box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-}
-form[id="login-inline"] input[type="submit"].disabled,
-form[id="login-inline"] input[type="submit"][disabled],
-fieldset[disabled] form[id="login-inline"] input[type="submit"] {
-  cursor: not-allowed;
-  pointer-events: none;
-  opacity: 0.65;
-  filter: alpha(opacity=65);
-  -webkit-box-shadow: none;
-  box-shadow: none;
-}
-form[id="login-inline"] input[type="submit"] i {
-  margin-left: 5px;
-}
 form.transaction-form hr {
   margin: 10px 0;
 }
@@ -7086,13 +6905,6 @@ p.outgo {
   text-align: center;
   margin-bottom: 5px;
 }
-.form-inline .input-icon i.input-icon-prepend {
-  top: 1px;
-  left: 20px;
-}
-.form-inline .input-icon input {
-  margin-left: 10px;
-}
 .input-icon {
   position: relative;
 }
@@ -7105,7 +6917,7 @@ p.outgo {
   left: 10px;
 }
 .input-icon i.input-icon-prepend + input {
-  text-indent: 25px;
+  text-indent: 20px;
 }
 .input-icon i.input-icon-append {
   right: 10px;
@@ -7249,7 +7061,7 @@ thead tr th {
 #empty-msg {
   text-align: center;
 }
-h4.area-header {
+.area-header {
   text-align: center;
   margin-top: 25px;
   margin-bottom: 25px;
@@ -7285,6 +7097,12 @@ h4.area-header {
 }
 .modal .modal-footer {
   background-color: #eeeeee;
+}
+.change-password-panel {
+  width: 40%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 /*
