--- a/templates/access/change_password.html
+++ b/templates/access/change_password.html
@@ -4,11 +4,39 @@
 
 {% block body %}
     
-<div class="container center-form">
-    <form action="{% url "change_password" %}" method="POST">{% csrf_token %}
-        {{ form }}
-        <input type="submit" value="{% trans "Reset password" %}" >
-    </form>
+<div class="panel panel-default change-password-panel">
+    <div class="panel-body">
+        <form action="{% url "change_password" %}" method="POST" class="form-horizontal">{% csrf_token %}
+            <div class="form-group">
+                <label class="col-lg-3 control-label" for="id_old_password">{% trans "Old password" %}</label> 
+                <div class="col-lg-9">
+                    <input id="id_old_password" name="old_password" type="password" class="form-control">
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label class="col-lg-3 control-label" for="id_new_password1">{% trans "New password" %}</label>
+                <div class="col-lg-9">
+                    <input id="id_new_password1" name="new_password1" type="password" class="form-control">
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label class="col-lg-3 control-label" for="id_new_password2">{% trans "Confirm password" %}</label>
+                <div class="col-lg-9">
+                    <input id="id_new_password2" name="new_password2" type="password" class="form-control">
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="col-lg-offset-3 col-lg-9">
+                    <button type="submit" class="btn btn-primary">
+                        {% trans "Reset password" %}
+                        <i class="icon-ok icon-large"></i>
+                    </button>
+                </div>
+            </div>
+        </form>
+    </div> <!-- container -->
 </div> <!-- container -->
 
 {% endblock body %}
