--- a/templates/access/forms/register.html
+++ b/templates/access/forms/register.html
@@ -1,78 +1,84 @@
 {% load i18n %}
 
-<form id="register-form" method="POST" action="{% url "register" %}">{% csrf_token %}
-    <h2>{% trans "Sign up" %}</h2>
-    
-    <div class="control-group {% if register_form.name.errors %}error{% endif %}">
-        <div class="controls input-icon">
+<form id="register-form" method="POST" action="{% url "register" %}" class="form-horizontal">{% csrf_token %}
+    <div class="form-group {% if register_form.name.errors %}error{% endif %}">
+        <label class="col-lg-3 control-label" for="name">{% trans "Name" %}</label> 
+        <div class="col-lg-9 input-icon">
             <i class="icon-user input-icon-prepend"></i>
             <input
                 type="text"
                 name="name"
-                class="input-block-level"
-                placeholder="{% trans "Name" %}"
+                class="form-control"
                 value="{{ register_form.name.value|default_if_none:"" }}"
             >
-
             {% for error in register_form.name.errors %}
                 <span class="help-block error">{{ error }}</span>
             {% endfor %}
         </div>
     </div>
 
-    <div class="control-group {% if register_form.email.errors %}error{% endif %}">
-        <div class="controls input-icon">
+    <div class="form-group {% if register_form.email.errors %}error{% endif %}">
+        <label class="col-lg-3 control-label" for="email">{% trans "Email" %}</label> 
+        <div class="col-lg-9 input-icon">
             <i class="icon-envelope input-icon-prepend"></i>
             <input
                 type="email"
                 name="email"
-                class="input-block-level"
-                placeholder="{% trans "Email" %}"
+                class="form-control"
                 value="{{ register_form.email.value|default_if_none:"" }}"
             >
-
             {% for error in register_form.email.errors %}
                 <span class="help-block error">{{ error }}</span>
             {% endfor %}
         </div>
     </div>
 
-    <div class="control-group {% if register_form.password1.errors %}error{% endif %}">
-        <div class="controls input-icon">
-                <i class="icon-asterisk input-icon-prepend"></i>
-                <input
-                    type="password"
-                    name="password1"
-                    class="input-block-level"
-                    placeholder="{% trans "Password" %}"
-                >
-
+    <div class="form-group {% if register_form.password1.errors %}error{% endif %}">
+        <label class="col-lg-3 control-label" for="password1">{% trans "Password" %}</label> 
+        <div class="col-lg-9 input-icon">
+            <i class="icon-envelope input-icon-prepend"></i>
+            <input
+                type="password"
+                name="password1"
+                class="form-control"
+                value="{{ register_form.password1.value|default_if_none:"" }}"
+            >
             {% for error in register_form.password1.errors %}
                 <span class="help-block error">{{ error }}</span>
             {% endfor %}
         </div>
     </div>
 
-    <div class="control-group {% if register_form.password2.errors %}error{% endif %}">
-        <div class="controls input-icon">
-                <i class="icon-asterisk input-icon-prepend"></i>
-                <input
-                    type="password"
-                    name="password2"
-                    class="input-block-level"
-                    placeholder="{% trans "Confirm password" %}"
-                >
-
+    <div class="form-group {% if register_form.password2.errors %}error{% endif %}">
+        <label class="col-lg-3 control-label" for="password2">{% trans "Confirm password" %}</label> 
+        <div class="col-lg-9 input-icon">
+            <i class="icon-envelope input-icon-prepend"></i>
+            <input
+                type="password"
+                name="password2"
+                class="form-control"
+                value="{{ register_form.password2.value|default_if_none:"" }}"
+            >
             {% for error in register_form.password2.errors %}
                 <span class="help-block error">{{ error }}</span>
             {% endfor %}
         </div>
     </div>
 
-    <input type="submit" value="{% trans "Sign up" %}">
+    <div class="form-group">
+        <div class="col-lg-offset-3 col-lg-9">
+            <button type="submit" value="{% trans "Sign up" %}" class="btn btn-danger">
+                {% trans "Sign up" %}
+                <i class="icon-user"></i>
+            </button>
+        </div>
+    </div>
 
-    <hr>
+</form>
 
+<hr>
+
+<div class="col-lg-offset-3 col-lg-9">
     <p>{% trans "Already a user?" %} <a href="{% url "login" %}">{% trans "Sign in" %}</a></p>
     <p><a href="{% url "password_reset_recover" %}">{% trans "Forgot your password?" %}</a></p>
-</form>
+</div>
