--- a/templates/access/register.html
+++ b/templates/access/register.html
@@ -1,9 +1,14 @@
 {% extends "access/login.html" %}
 
+{% load i18n %}
 
 {% block body %}
 
-<div class="container center-form">
-    {% include "access/forms/register.html" %}
+<h2 class="area-header">{% trans "Sign up" %}</h2>
+
+<div class="panel panel-default change-password-panel">
+    <div class="panel-body">
+        {% include "access/forms/register.html" %}
+    </div>
 </div>
 {% endblock body %}
