--- a/templates/base.html
+++ b/templates/base.html
@@ -50,8 +50,8 @@
             <div class="collapse navbar-collapse navbar-ex1-collapse">
                 {% block webapp-menu %}
                 {% endblock webapp-menu %}
-                <ul class="nav navbar-nav navbar-right">
                     {% if user.is_authenticated %}
+                    <ul class="nav navbar-nav navbar-right">
                         <li class="dropdown">
                             <a class="dropdown-toggle" data-toggle="dropdown">{% trans "Contact us" %} <i class="icon-comments-alt icon-large"></i></a>
                             <ul class="dropdown-menu">
@@ -67,15 +67,17 @@
                             </ul>
                         </li>
                         {% include "user-menu.html" %}
+                    </ul>
                     {% else %}
                         {% include "access/forms/login_inline.html" %}
                     {% endif %}
-                </ul>
             </div>
         </div>
     </div>
 
+    <div class="container">
         {% block body %}{% endblock body %}
+    </div>
 
         {% block bodyend %}{% endblock bodyend %}
         {% csrf_token %}
