--- a/static/less/forms.less
+++ b/static/less/forms.less
@@ -18,8 +18,10 @@
         right: 10px;
     }
 
-    .xinput {
-        text-indent: 25px;
+    &[class^="col-"] {
+        i.input-icon-prepend {
+              left: (@grid-gutter-width / 2) + 10;
+        }
     }
 }
 
