--- a/templates/access/login.html
+++ b/templates/access/login.html
@@ -27,7 +27,7 @@
                 </div>
             {% endfor %}
 
-            <div class="form-group {% if form.username.errors %}error{% endif %}">
+            <div class="form-group {% if form.username.errors %}has-error{% endif %}">
                 <label class="col-lg-3 control-label" for="username">{% trans "Email" %}</label>
                 <div class="col-lg-9 input-icon">
                     <i class="icon-envelope input-icon-prepend"></i>
@@ -38,22 +38,13 @@
                         class="form-control"
                         value="{{ form.username.value|default_if_none:"" }}"
                     >
+                    {% for error in form.username.errors %}
+                        <span class="help-block error">{{ error }}</span>
+                    {% endfor %}
                 </div>
-
-                {% if form.username.errors %}
-                    <i
-                        class="icon-exclamation icon-2x input-icon-append"
-                        data-toggle="tooltip"
-                        data-placement="right"
-                        data-container="body"
-                        
-                        title="{{ form.username.errors | join:"\n"}}"
-                        ></i>
-
-                {% endif %}
             </div>
 
-            <div class="form-group {% if form.password.errors %}error{% endif %}">
+            <div class="form-group {% if form.password.errors %}has-error{% endif %}">
                 <label class="col-lg-3 control-label" for="password">{% trans "Password" %}</label>
                 <div class="col-lg-9 input-icon">
                     <i class="icon-asterisk input-icon-prepend"></i>
@@ -64,19 +55,10 @@
                         class="form-control"
                         value="{{ form.email.value|default_if_none:"" }}"
                     >
+                    {% for error in form.password.errors %}
+                        <span class="help-block error">{{ error }}</span>
+                    {% endfor %}
                 </div>
-
-                {% if form.password.errors %}
-                    <i
-                        class="icon-exclamation icon-2x input-icon-append"
-                        data-toggle="tooltip"
-                        data-placement="right"
-                        data-container="body"
-                        
-                        title="{{ form.password.errors | join:"\n"}}"
-                        ></i>
-
-                {% endif %}
             </div>
 
             <div class="form-group">
