--- a/templates/webapp/index.html
+++ b/templates/webapp/index.html
@@ -41,7 +41,7 @@
 
 {% block bodyend %}
 
-{% if debug %}
+{% if is_debug %}
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular-resource.js"></script>
