--- a/templates/password_reset/reset_sent.html
+++ b/templates/password_reset/reset_sent.html
@@ -5,13 +5,9 @@
 
 {% block content %}
 	<p>
-    {% blocktrans %}
-        An email was sent to <strong>{{ email }}</strong>.
-    {% endblocktrans %}
+    {% blocktrans %}An email was sent to <strong>{{ email }}</strong>.{% endblocktrans %}
     </p>
 	<p>
-    {% blocktrans %}
-        Follow the instructions on this email to set a new password.
-    {% endblocktrans %}
+    {% blocktrans %}Follow the instructions on this email to set a new password.{% endblocktrans %}
     </p>
 {% endblock %}
