--- a/static/less/forms.less
+++ b/static/less/forms.less
@@ -3,7 +3,7 @@
 
     i.input-icon-prepend, i.input-icon-append {
         position: absolute;
-        top: (@padding-base-vertical + 1); //padding + border
+        bottom: (@padding-base-vertical + 1); //padding + border
     }
 
     i.input-icon-prepend {
