new color for delete-transaction

--- a/static/less/styles.less
+++ b/static/less/styles.less
@@ -302,3 +302,7 @@ hr {
         border-right-color: @outgo;
     }
 }
+
+#transaction-list-panel .transaction-table .action-bar > i.delete-transaction {
+    color: @brand-danger;
+}
