--- a/templates/webapp/transaction-list.html
+++ b/templates/webapp/transaction-list.html
@@ -52,7 +52,7 @@
 
                     <td class="action-bar" ex-actionbar ng-controller="TransactionActionBarCtrl">
                         <i
-                            class="icon-trash delete-entry"
+                            class="icon-trash delete-transaction"
                             ng-click="removeTransaction()"
                         ></i>
                     </td>
